<?xml version="1.0"?>
<package format="3">
  <name>sim_pkg</name>
  <version>0.0.1</version>
  <description>ROS 2 + Isaac Sim demo package (nodes + launch files)</description>

  <maintainer email="jliu6162@gmail.com">jliu</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool for Python packages -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies your nodes/launch files use -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>psutil</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
